# stream-line-SherawatHari

./: CMakeLists.txt  sensor_data.txt
.github/workflows/: main-workflow.yml
include/: processor.h  sender.h
src/: processor.cpp  sender.cpp
tests/: sender_test.cpp
